<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_image"
        android:orientation="vertical"
        android:padding="20dp">

      <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:src="@drawable/lo"
          android:layout_gravity="center"/>

        <EditText
            android:id="@+id/lusername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/login_edittext"
            android:hint="E-mail or username"
            android:paddingLeft="18dp" />

        <EditText
            android:id="@+id/lpassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edittext"
            android:hint="Password"
            android:paddingLeft="18dp"
            />
        <CheckBox
            android:id="@+id/chkrememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember me"
            />


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:text="sign In"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="28dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_alignParentStart="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"/>



        </RelativeLayout>






            <View
                android:id="@+id/lineEnd"
                android:layout_width="match_parent"
                android:layout_marginTop="100dp"
                android:layout_height="0.17dp"
                android:background="#c0c0c0"
                app:layout_constraintBottom_toTopOf="@+id/horz"/>

            <LinearLayout
                android:id="@+id/horz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textColor="#777"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#777"
                    android:text="Dont have an account?" />


                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:text="Sign up."
                    android:textColor="#0D153D"
                    android:textStyle="bold" />

            </LinearLayout>








    </LinearLayout>


</RelativeLayout>